Главная страница блога - фикс цветов иконок

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -396,24 +396,44 @@ dialog
   background-image: url(../images/icons/plus.svg)
   background-repeat: no-repeat
 
-.icon--tiles
+.icon--tiles-black
   background-image: url('../images/icons/tiles-black.svg')
   background-repeat: no-repeat
 
-.icon--navigator
+.icon--navigator-black
   background-image: url('../images/icons/navigator-black.svg')
   background-repeat: no-repeat
   
-.icon--chat
+.icon--chat-black
   background-image: url('../images/icons/chat-black.svg')
   background-repeat: no-repeat
   
-.icon--star
+.icon--star-black
   background-image: url('../images/icons/star-black.svg')
   background-repeat: no-repeat
   
-.icon--search
+.icon--search-black
   background-image: url('../images/icons/search-black.svg')
+  background-repeat: no-repeat
+
+.icon--tiles-white
+  background-image: url('../images/icons/tiles-white.svg')
+  background-repeat: no-repeat
+
+.icon--navigator-white
+  background-image: url('../images/icons/navigator-white.svg')
+  background-repeat: no-repeat
+  
+.icon--chat-white
+  background-image: url('../images/icons/chat-white.svg')
+  background-repeat: no-repeat
+  
+.icon--star-white
+  background-image: url('../images/icons/star-white.svg')
+  background-repeat: no-repeat
+  
+.icon--search-white
+  background-image: url('../images/icons/search-white.svg')
   background-repeat: no-repeat
 
 .link--grey
@@ -5172,14 +5192,6 @@ dialog
   font-weight: 500
   line-height: 130%
   text-align: center
-
-  // @media screen and (max-width: $tablet)
-  //   padding-bottom: 1.6rem
-
-  // @media screen and (max-width: $tablet)
-  //   padding-bottom: 1.6rem
-
-
 /* MENU */
 
 /* Блог */
@@ -5258,19 +5270,19 @@ dialog
   &:hover
     color: $yellow
 
-  &:hover .icon--tiles
+  &:hover .icon--tiles-white
     background-image: url('../images/icons/tiles-yellow.svg')
 
-  &:hover .icon--chat
+  &:hover .icon--chat-white
     background-image: url('../images/icons/chat-yellow.svg')
 
-  &:hover .icon--star
+  &:hover .icon--star-white
     background-image: url('../images/icons/star-yellow.svg')
 
-  &:hover .icon--search
+  &:hover .icon--search-white
     background-image: url('../images/icons/search-yellow.svg')
 
-  &:hover .icon--navigator
+  &:hover .icon--navigator-white
     background-image: url('../images/icons/navigator-yellow.svg')
 
 .blog_feed__list__item__link__date
