--- a/sass/style.sass
+++ b/sass/style.sass
@@ -581,7 +581,7 @@ dialog
   margin: 0 0.2rem
   width: 0.6rem
   height: 0.6rem
-  border-radius: $radius
+  // border-radius: $radius
   background-color: $grey3
   cursor: pointer
 
@@ -5378,5 +5378,200 @@ dialog
   align-self: center
   grid-row: span 2
   display: block
+
+.blog_article__back
+  display: inline-block
+  margin-top: 6rem
+  margin-bottom: 2rem
+  padding-left: 1.8rem + 1.6rem + .8rem
+  background-image: url(../images/icons/arrow-left-white.svg)
+  background-repeat: no-repeat
+  background-size: 1.6rem 1.6rem
+  background-position: top 50% left 1.8rem
+
+.blog_article
+  width: 100%
+  max-width: 80.6rem
+  margin-bottom: 2rem
+
+.blog_article__container
+  display: grid
+  grid-template-columns: auto 1.6rem
+  gap: 1.2rem
+  position: relative
+  padding: 2.4rem
+  width: 100%
+  height: 26.8rem
+  color: #fff
+  background-image: linear-gradient(transparent, $black)
+  border-radius: $radius
+  overflow: hidden
+
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 1fr
+
+.blog_article__container__date
+  font-size: 1.2rem
+  font-weight: 400
+  line-height: 130%
+
+.blog_article__container__icon
+  width: 1.6rem
+  height: 1.6rem
+  background-size: 100% 100%
+
+.blog_article__container__title
+  grid-row: span 2
+  align-content: end
+  font-size: 2.8rem
+  font-weight: 700
+  line-height: 130%
+  color: $white
+
+.blog_article__container__image
+  object-fit: cover
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  z-index: -1
+
+.blog_article__author
+  width: 100%
+  max-width: 80.6rem
+  margin-bottom: 6rem
+
+.blog_article__author__container
+  margin-bottom: 8rem
+  padding: 2rem
+  display: grid
+  grid-template-columns: 15rem auto auto
+  grid-template-areas: "photo title intro" "photo name intro" "photo button intro"
+  column-gap: 2rem
+  row-gap: .6rem
+  background-color: $black
+  border-radius: $radius
+
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 12rem auto
+    grid-template-areas: "photo title" "photo name" "intro intro"
+
+
+.blog_article__author__container__photo
+  grid-area: photo
+  align-self: center
+  grid-row: span 3
+  width: 100%
+  border-radius: 50%
+
+.blog_article__author__container__title, .blog_article__author__container__intro
+  display: block
+  font-size: 1.4rem
+  font-weight: 400
+  line-height: 130%
+  color: #fff
+
+  @media screen and (max-width: $tablet)
+    margin-top: 1.4rem
+
+.blog_article__author__container__title
+  grid-area: title
+  align-self: end
+
+.blog_article__author__container__name
+  grid-area: name
+  align-self: start
+  display: block
+  font-size: 2rem
+  font-weight: 700
+  line-height: 130%
+  color: #fff
+
+.blog_article__author__container__button
+  grid-area: button
+  place-self: baseline
+  white-space: nowrap
+
+.blog_article__author__container__intro
+  grid-area: intro
+  align-self: center
+  grid-row: span 3
+  display: block
+
+.blog_article__content
+  width: 100%
+  max-width: 80.6rem
+  margin-bottom: 2rem
+  font-size: 1.8rem
+
+.blog_article__content__intro
+  margin-bottom: 2rem
+  display: grid
+  grid-template-columns: auto 25%
+  background-color: $grey1
+  border-radius: $radius
+
+.blog_article__content__intro__text
+  padding: 2.4rem
+  display: flex
+  flex-direction: column
+  gap: 1.5rem
+
+.blog_article__content__intro__image
+  height: 100%
+  width: 100%
+  object-fit: cover
+  border-radius: $radius
+
+.blog_article__content__hero
+  margin-bottom: 1.6rem
+  border-radius: $radius
+
+.blog_article__content__main
+  
+  ul, ol, p, h2, h3, h4, h5, h6, blockquote, img
+    display: inline-block
+    margin-bottom: 1.6rem
+
+  ul, ol
+    margin-left: 1.8rem
+
+  ul li, ol li
+    padding-bottom: 2rem
+    padding-left: 2.8rem
+
+.blog_article__banner
+  position: relative
+  width: 100%
+  max-width: 80.6rem
+  margin-bottom: 2rem
+
+.blog_article__banner__container
+  border-radius: $radius
+  overflow: hidden
+
+  .tns-item, .tns-slide-active
+    border-radius: $radius
+    overflow: hidden
+
+.blog_article__banner__arrows
+
+  .arrow--left
+    left: var(--swiper-navigation-sides-offset, 2.5rem)
+
+  .arrow--right
+    right: var(--swiper-navigation-sides-offset, 2.5rem)
+
+.blog_article__banner__dots.dots
+  bottom: 7rem !important
+
+.blog_article__banner__description
+  margin: 1.2rem 5.2rem
+  padding: 1.8rem 4rem
+  max-width: 80.6rem
+  font-size: 1.4rem
+  font-weight: 400
+
 
 /* Блог */
