--- a/sass/style.sass
+++ b/sass/style.sass
@@ -392,9 +392,15 @@ dialog
   background-image: url(../images/icons/minus.svg)
   background-repeat: no-repeat
 
+.icon--minus-violet
+  background-image: url("../images/icons/minus-violet.svg")
+
 .icon--plus
   background-image: url(../images/icons/plus.svg)
   background-repeat: no-repeat
+
+.icon--plus-pink
+  background-image: url("../images/icons/plus-pink.svg")
 
 .icon--tiles-black
   background-image: url('../images/icons/tiles-black.svg')
@@ -5597,5 +5603,268 @@ dialog
     max-width: 100%
     text-align: center
 
+.main_blog_product
+  margin: 0 auto 2rem
+  width: 100%
+  max-width: 80.6rem
+
+.blog_product__back
+  display: inline-block
+  margin-top: 4rem
+  margin-bottom: 2rem
+  padding-left: 1.8rem + 1.6rem + .8rem
+  background-image: url("../images/icons/arrow-left-black.svg")
+  background-repeat: no-repeat
+  background-size: 1.6rem 1.6rem
+  background-position: top 50% left 1.8rem
+
+  @media screen and (max-width: $tablet)
+    padding-top: 1rem
+    padding-bottom: 1rem
+
+.blog_product
+  margin-bottom: 2rem
+
+.blog_product__container
+  display: grid
+  grid-template-columns: 3fr 2fr
+  gap: 2rem
+  padding: 2rem
+  background-color: #fff
+  border-radius: $radius
+
+.blog_product__container__gallery
+  display: grid
+  grid-template-columns: 7.6rem auto
+  gap: 1rem
+  padding-right: 1.6rem
+
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 1fr
+    gap: 2rem
+    padding: 0
+
+.blog_product__container__gallery__image
+  width: 100%
+  cursor: pointer
+  border-radius: $radius
+
+.blog_product__container__gallery__preview
+  display: flex
+  flex-direction: column
+  gap: .3rem
+
+  @media screen and (max-width: $tablet)
+    display: none
+
+.blog_product__container__gallery__preview__image
+  padding: .8rem
+  width: 100%
+  cursor: pointer
+  background-color: #fff
+  border-radius: $radius
+
+  &:hover
+    border: .1rem solid $pink
+
+.blog_product__container__gallery__preview__up
+  width: 100%
+  height: 1.6rem
+  background-size: 1.6rem
+  background-image: url('../images/icons/up-black.svg')
+  background-repeat: no-repeat
+  background-position: 50% 50%
+  cursor: pointer
+
+.blog_product__container__gallery__preview__down
+  width: 100%
+  height: 1.6rem
+  background-size: 1.6rem
+  background-image: url('../images/icons/down-black.svg')
+  background-repeat: no-repeat
+  background-position: 50% 50%
+  cursor: pointer
+
+.blog_product__container__gallery__dots
+  display: none
+  
+  @media screen and (max-width: $tablet)
+    display: flex
+    margin: 0 auto
+    padding: 0 1rem 0
+
+.blog_product__container__intro
+  display: grid
+  grid-template-rows: auto auto 1fr
+  gap: 1rem
+
+.blog_product__container__heading
+  font-size: 2rem
+  font-weight: 700
+  line-height: 130%
+
+.blog_product__container__intro__text
+  font-size: 1.4rem
+  font-weight: 400
+  line-height: 130%
+
+.blog_product__container__intro__buy
+  place-self: end
+  width: 100%
+
+.blog_product__container__intro__buy__prices
+  gap: 0.4rem
+  align-items: center
+  margin-bottom: 1rem
+
+  @media screen and (max-width: $tablet)
+    align-items: flex-start
+    flex-direction: column
+
+.blog_product__reviews
+  margin-bottom: 2rem
+
+.blog_product__reviews__heading
+  display: inline-block
+  margin-bottom: 1.6rem
+
+.blog_product__shop_rating
+  display: grid
+  grid-template-columns: 1fr 1fr 1fr
+  grid-template-rows: auto auto
+  gap: 1.2rem
+  margin-bottom: 2rem
+
+.blog_product__shop_rating__heading
+  grid-column: span 3
+  display: inline-block
+  margin-bottom: 1.6rem
+
+.blog_product__shop_rating__infographics
+  display: flex
+  flex-direction: column
+  gap: 2rem
+  background-color: #fff
+  border-radius: $radius
+  padding: 2rem
+
+.blog_product__shop_rating__infographics__block
+  font-size: 1.4rem
+  font-weight: 400
+  line-height: 130%
+
+.blog_product__shop_rating__infographics__block__title
+  display: inline-block
+  margin-bottom: .8rem
+  padding: 0
+
+.blog_product__shop_rating__infographics__block__progress
+  width: 100%
+  height: .6rem
+  background-color: $grey3
+  border: none
+  border-radius: $radius
+  overflow: hidden
+
+.blog_product__shop_rating__infographics__block__progress__value
+  width: 30%
+  height: .6rem
+  background-color: $pink
+  border: none
+  border-radius: $radius
+  overflow: hidden
+
+.blog_product__comparison__block__title
+  display: inline-block
+  margin-bottom: 1.6rem
+
+.blog_product__comparison
+  display: grid
+  grid-template-columns: 1fr 1fr
+  gap: 1.2rem
+
+.blog_product__comparison__block
+  padding: 2rem
+  background-color: #fff
+  border-radius: $radius
+  overflow: hidden
+  
+
+.blog_product__comparison__block__list
+  display: flex
+  flex-direction: column
+  gap: 2rem
+
+.blog_product__comparison__block__list__item
+  padding-left: .8 + 1.6rem
+  background-repeat: no-repeat
+  background-position: left 0 top 50%
+
+.blog_product__comparison__block__title
+  font-size: 2rem
+  font-weight: 700
+  line-height: 130%
+
+.blog_product__author
+  width: 100%
+  max-width: 80.6rem
+  margin-bottom: 6rem
+
+.blog_product__author__container
+  margin-bottom: 4rem
+  padding: 2rem
+  display: grid
+  grid-template-columns: 15rem auto auto
+  grid-template-areas: "photo title intro" "photo name intro" "photo button intro"
+  column-gap: 2rem
+  row-gap: .6rem
+  background-color: $black
+  border-radius: $radius
+
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 12rem auto
+    grid-template-areas: "photo title" "photo name" "photo button"
+
+.blog_product__author__container__photo
+  grid-area: photo
+  align-self: center
+  grid-row: span 3
+  width: 100%
+  border-radius: 50%
+
+.blog_product__author__container__title, .blog_product__author__container__intro
+  display: block
+  font-size: 1.4rem
+  font-weight: 400
+  line-height: 130%
+  color: #fff
+
+.blog_product__author__container__title
+  grid-area: title
+  align-self: end
+
+.blog_product__author__container__name
+  grid-area: name
+  align-self: start
+  display: block
+  font-size: 2rem
+  font-weight: 700
+  line-height: 130%
+  color: #fff
+
+.blog_product__author__container__button
+  grid-area: button
+  place-self: baseline
+  white-space: nowrap
+
+  @media screen and (max-width: $tablet)
+    margin-top: 1rem
+    padding: 1rem 1.8rem
+
+.blog_product__author__container__intro
+  grid-area: intro
+  align-self: center
+  grid-row: span 3
+  display: block
 
 /* Блог */
